test/fail/OpenPublicPlusTypeError.err
OpenPublicPlusTypeError.agda:12,17-21
Set2 !=< Set
when checking that the expression Set1 has type Set
